--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,2 @@
 [tool.isort]
-multi_line_output = 3
-line_length = 90
-include_trailing_comma = true
-
-[tool.black]
-line_length = 90
+profile = "black"
